# void-object

./: README.md  pyproject.toml
tests/: test_void_object.py
void_object/: __init__.py
