[tool.poetry]
name = "void-object"
version = "0.1.2"
description = "Void Object for Python"
authors = ["Federico Marcos <marcosfede@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
